[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[bin]]
name = "part"
path = "tests/02-create-builder.rs"



[dev-dependencies]
trybuild = "1.0"

[dependencies]
proc-macro2 = "1.0"
syn = "1.0.16"
quote = "1.0"
